--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run @smoke tagged Playwright tests
-        run: npx playwright test --grep "@smoke"
+        run: npx playwright test --grep @smoke
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
