--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,9 +31,12 @@ jobs:
       - name: Run @smoke tagged Playwright tests
         run: npx playwright test --grep @smoke
 
+      - name: Generate Timestamp
+        run: echo "Timestamp=$(date+ %s)" >> $GITHUB_ENV
+
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-report
+          name: playwright-report-$Timestamp
           path: playwright-report/
           retention-days: 30
