--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,11 +32,11 @@ jobs:
         run: npx playwright test --grep @smoke
 
       - name: Generate Timestamp
-        run: echo "Timestamp=$(date+ %s)" >> $GITHUB_ENV
+        run: echo "Timestamp=$(date +%s)" >> $GITHUB_ENV
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-report-$Timestamp
+          name: playwright-report-${{env.Timestamp}}
           path: playwright-report/
           retention-days: 30
